syntax = "proto3";
package login.service.v1;
option go_package = "project-user/pkg/service/login.service.v1";

// CaptchaMessage is the request message for the GetCaptcha method.
message CaptchaMessage {
  string mobile = 1;
}

// CaptchaResponse is the response message for the GetCaptcha method.
message CaptchaResponse{
  string code = 1;
}

// 定义Register服务参数
message RegisterMessage {
  string email = 1;
  string name = 2;
  string password = 3;
  string mobile = 4;
  string captcha = 5;
}

// 定义Register服务返回值
message RegisterResponse {}

// LoginService is the service for login.
// 定义服务
service LoginService {
  rpc GetCaptcha(CaptchaMessage) returns (CaptchaResponse) {}
  rpc Register(RegisterMessage) returns (RegisterResponse) {}
}